--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a href="#" class="header-link">about</a>
                 <a href="#team" class="header-link">team</a>
                 <a href="#" class="header-link">contacts</a>
+                <a href="#" class="header-link">s</a>
             </nav>
         </div>
     </div>
